# mcpagentscanner

./: .gitignore  LICENSE  MCP_CLIENT_GUIDE.md  README.md  app.py  example_config.json  index.html  package-lock.json  package.json  requirements.txt  run_dashboard.py  run_modern_dashboard.py  server.py  vite.config.ts  web_app.py
src/: App.tsx  index.css  main.tsx
templates/: index.html  (+1 more)
test_agents/example-codebases/langgraph/imbizo/: .env.example  .gitignore  README.md  app.py  dev_requirements.txt  pyproject.toml  requirements.txt  tox.ini
test_agents/example-codebases/langgraph/imbizo/docs/: configuration.md
test_agents/example-codebases/langgraph/imbizo/examples/: ImbizopmAgentsTest.ipynb  InsureDtypeExample.ipynb  issues.json
test_agents/example-codebases/langgraph/imbizo/imbizopm/: __init__.py  cli.py  cli.py.bak  config.py  github_manager.py  model_config.py  ui_app.py
test_agents/example-codebases/langgraph/imbizo/imbizopm/llm_providers/: __init__.py  anthropic_provider.py  base_provider.py  factory.py  ollama_provider.py  openai_provider.py
test_agents/example-codebases/langgraph/imbizo/imbizopm/project_generator/: __init__.py  multi_provider_generator.py  project_generator.py  prompts.py
test_agents/example-codebases/langgraph/imbizo/imbizopm/ui/: __init__.py  base.py  launcher.py  main.py  workflow_ui.py
test_agents/example-codebases/langgraph/imbizo/imbizopm/utilities/: __init__.py  parser.py  sub_issue.py
test_agents/example-codebases/langgraph/imbizo/imbizopm_agents/: __init__.py  graph.py  graph_config.json  graph_config.py  graph_config.py.bak  imbizopm.py  project_refined.py
test_agents/example-codebases/langgraph/imbizo/tests/: test_cli.py  test_cli.py.bak  test_config.py  test_github_manager.py  test_llm_provider.py  test_multi_provider_generator.py  test_project_generator.py  test_prompts.py
(+66 files in other folders)
